# workforce-one

./: .gitignore  Cargo.toml  init-db.sql
src/: main.rs
src/cli/: io.rs  mod.rs
src/db/: connection.rs  mod.rs  models.rs  query.rs
workforce_lib/: Cargo.toml
workforce_lib/src/cli/: io.rs  mod.rs
workforce_lib/src/db/: connection.rs  mod.rs  query.rs
