[package]
name = "workforce-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "mysql", "macros" ] }
tokio = { version = "1.28.2", features = ["macros"] }
