[package]
name = "workforce-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "mysql", "macros" ] }
tokio = { version = "1.28.1", features = ["macros"] }
